Fixed unformatted text paste. (fdo#32213)

* Changed default option settings for CSV import options to
  something sensible.

* Set explicit multi-line cell handling policy during unformatted
  text pasting.